--- a/sapl/templates/menu_tabelas_auxiliares.yaml
+++ b/sapl/templates/menu_tabelas_auxiliares.yaml
@@ -167,6 +167,9 @@
   - title: {% trans 'Tipo de Justificativa' %}
     url: sapl.sessao:tipojustificativa_list
     css_class: btn btn-link
+  - title: {% trans 'Lista Branca para Votação' %}
+    url: sapl.base:listabrancavotacao_list
+    css_class: btn btn-link
 - title: {% trans 'Módulo LexML' %}
   css_class: head_title
   children:
