--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,18 @@
-media
-collected_static
+*.log
+*.swp
+*~
+whoosh_index/
+whoosh/
+media/
+collected_static/
+bower
+bower_components
+postgres-data/
+data/
+solr-*/
+.cache
 .git
-whoosh
+.github
+.idea
+.project
+.env
