--- a/sapl/templates/base/layouts.yaml
+++ b/sapl/templates/base/layouts.yaml
@@ -18,7 +18,7 @@ AppConfig:
   - esfera_federacao
 
   {% trans 'Proposições e Protocolo' %}:
-  - sequencia_numeracao_proposicao sequencia_numeracao_protocolo  
+  - sequencia_numeracao_proposicao sequencia_numeracao_protocolo inicio_numeracao_protocolo
   - protocolo_manual receber_recibo_proposicao
   - proposicao_incorporacao_obrigatoria escolher_numero_materia_proposicao
 
