--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,9 +1,9 @@
-django>=1.11.19,<2.0
+django==2.2.9
 django-haystack==2.8.1
 django-filter==2.0.0
 djangorestframework==3.9.1
 dj-database-url==0.5.0
-django-braces==1.9.0
+django-braces==1.14.0
 django-crispy-forms==1.7.2
 django-floppyforms==1.7.0
 django-extra-views==0.12.0
